tests/invalid/state_vars_test5.err_exp
state_vars_test5.m:021: In clause for predicate `state_vars_test5.p/1':
state_vars_test5.m:021:   warning: variable `STATE_VARIABLE_X' occurs only once in this scope.
state_vars_test5.m:021: In clause for `p(out)':
state_vars_test5.m:021:   mode error: argument 1 did not get sufficiently instantiated.
state_vars_test5.m:021:   Final instantiatedness of `STATE_VARIABLE_X' was `free',
state_vars_test5.m:021:   expected final instantiatedness was `ground'.
For more information, try recompiling with `-E'.
